Build front end and fix schema
