# contracts/openapi.yaml
@@ -466,8 +466,7 @@
                     },
                     "answers": {
                         "items": {
-                            "additionalProperties": true,
-                            "type": "object"
+                            "$ref": "#/components/schemas/QAPair"
                         },
                         "type": "array",
                         "title": "Answers"
@@ -496,6 +495,17 @@
                         },
                         "type": "array",
                         "title": "Clarifying Questions"
+                    },
+                    "enriched_idea": {
+                        "anyOf": [
+                            {
+                                "type": "string"
+                            },
+                            {
+                                "type": "null"
+                            }
+                        ],
+                        "title": "Enriched Idea"
                     }
                 },
                 "type": "object",
@@ -563,6 +573,10 @@
                         "type": "string",
                         "title": "Category"
                     },
+                    "description": {
+                        "type": "string",
+                        "title": "Description"
+                    },
                     "idea": {
                         "type": "string",
                         "title": "Idea"
@@ -571,6 +585,7 @@
                 "type": "object",
                 "required": [
                     "category",
+                    "description",
                     "idea"
                 ],
                 "title": "GoalsRequest"
@@ -764,6 +779,24 @@
                     "milestones"
                 ],
                 "title": "Project"
+            },
+            "QAPair": {
+                "properties": {
+                    "question": {
+                        "type": "string",
+                        "title": "Question"
+                    },
+                    "answer": {
+                        "type": "string",
+                        "title": "Answer"
+                    }
+                },
+                "type": "object",
+                "required": [
+                    "question",
+                    "answer"
+                ],
+                "title": "QAPair"
             },
             "SendMessageRequest": {
                 "properties": {
